infraestructura/k8s/minikube/deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  namespace: arq-ref-demo
  name: arq-ref-demo-back
spec:
  selector:
    matchLabels:
      app: arq-ref-demo-back
  replicas: 1 # numero de replicas a crear para la aplicacion
  template:
    metadata:
      labels:
        app: arq-ref-demo-back
    spec:
      # no correr los procesos en los contenedores con usuario root
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      containers:
        #este nombre debe ser igual al nombre indicado arriba en la metadata
        - name: arq-ref-demo-back
          #change for image to deploy
          image: arq-ref-demo-back:1
#          env:
#            - name: http_proxy
#              value: http://proxymde1.proteccion.local:8080
#            - name: https_proxy
#              value: http://proxymde1.proteccion.local:8080
          ports:
            - containerPort: 8443
              protocol: TCP
          # especificar los recursos de CPU y Memoria requeridos
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          #prueba para verificar que port de servicio este disponible antes de dejar en status READY el POD
          # #docs https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 60
            periodSeconds: 30
            successThreshold: 1
            httpGet:
              path: /anon/health
              port: 8443
          #prueba para verificar que port de servicio este disponible cada cierto tiempo
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 240
            periodSeconds: 20
            successThreshold: 1
            httpGet:
              path: /anon/health
              port: 8443
          #Montaje de los volumenes para usar los archivos definidos en el secret
          volumeMounts:
            - name: conf-aplicacion
              mountPath: /app/config
              readOnly: true
          securityContext:
            allowPrivilegeEscalation: false
      #Montaje de los archivos de configuracion indicados en 'configsecret.yaml'
      volumes:
        - name: conf-aplicacion
          secret:
            secretName: arq-ref-demo-config
